wifi_module_keil_buildable_20260630_221042/build_after_uart_add.log
*** Using Compiler 'V6.24', folder: 'C:\Users\yiziw\AppData\Local\Keil_v5\ARM\ARMCLANG\Bin'
Build target 'Target 1'
Note: source file '.\libs\libs.c' - object file renamed from '.\Objects\libs.o' to '.\Objects\libs_1.o'.Note: source file 'D:/RA6M5/wifi_module_keil/ra_gen/common_data.c' - object file renamed from '.\Objects\common_data.o' to '.\Objects\common_data_1.o'.Note: source file 'D:/RA6M5/wifi_module_keil/ra_gen/hal_data.c' - object file renamed from '.\Objects\hal_data.o' to '.\Objects\hal_data_1.o'.Note: source file 'D:/RA6M5/wifi_module_keil/ra_gen/main.c' - object file renamed from '.\Objects\main.o' to '.\Objects\main_1.o'.Note: source file 'D:/RA6M5/wifi_module_keil/ra_gen/pin_data.c' - object file renamed from '.\Objects\pin_data.o' to '.\Objects\pin_data_1.o'.Note: source file 'D:/RA6M5/wifi_module_keil/ra_gen/vector_data.c' - object file renamed from '.\Objects\vector_data.o' to '.\Objects\vector_data_1.o'.D:/RA6M5/wifi_module_keil/ra/fsp/src/r_sci_uart/r_sci_uart.c(362): error: use of undeclared identifier 'BSP_FEATURE_SCI_UART_ABCSE_RESTRICTED_CHANNELS_MASK'
  362 |     FSP_ERROR_RETURN(!((BSP_FEATURE_SCI_UART_ABCSE_RESTRICTED_CHANNELS_MASK & (1 << p_cfg->channel)) &&
      |                         ^
D:/RA6M5/wifi_module_keil/ra/fsp/src/r_sci_uart/r_sci_uart.c(425): error: use of undeclared identifier 'BSP_FEATURE_SCI_ADDRESS_MATCH_CHANNELS_MASK'
  425 |     if (BSP_FEATURE_SCI_ADDRESS_MATCH_CHANNELS_MASK & (1U << p_cfg->channel))
      |         ^
D:/RA6M5/wifi_module_keil/ra/fsp/src/r_sci_uart/r_sci_uart.c(790): error: use of undeclared identifier 'BSP_FEATURE_SCI_UART_ABCSE_RESTRICTED_CHANNELS_MASK'
  790 |     FSP_ERROR_RETURN(!((BSP_FEATURE_SCI_UART_ABCSE_RESTRICTED_CHANNELS_MASK & (1 << p_ctrl->p_cfg->channel)) &&
      |                         ^
D:/RA6M5/wifi_module_keil/ra/fsp/src/r_sci_uart/r_sci_uart.c(1414): error: use of undeclared identifier 'BSP_FEATURE_SCI_UART_FIFO_CHANNELS_MASK'
 1414 |     if (BSP_FEATURE_SCI_UART_FIFO_CHANNELS_MASK & (1U << p_cfg->channel))
      |         ^
4 errors generated.
compiling r_sci_uart.c...
".\Objects\WiFiModule.axf" - 4 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:01
